# test01890603-4dba-4043-8a62-29c234f0a717

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: authenticate_user_service.py  generate_qr_code_service.py  get_exchange_rate_service.py  get_ip_geolocation_service.py  server.py  submit_feedback_service.py
